--- a/clickFacts/clickFacts.html
+++ b/clickFacts/clickFacts.html
@@ -1,6 +1,6 @@
 <div ng-controller="ClickFactsCtrl as facts" id="click_facts" ng-cloak layout-wrap>
   <section class="factSheet" layout="row" layout-wrap layout-align="center">
-    <div class="flip" layout="row" layout-wrap>
+    <div class="flip" layout="row" layout-xs="column" layout-wrap>
       <md-card class="factCard" ng-repeat="it in trivia"
                ng-class="{'flipped':isFlipped}" ng-click="isFlipped=!isFlipped"
                flex="22" ng-cloak>
