--- a/app/clickQuiz/partial-quiz.html
+++ b/app/clickQuiz/partial-quiz.html
@@ -2,20 +2,28 @@
   <div ng-show="!quizOver">
     <div layout="row">
       <h2 id="question">{{question}}</h2>
-      <span flex></span>
-      <div class="quizScore" id="score" ng-show="inProgress || quizOver">
-        <h2>Score: {{score}}</h2>
-      </div>
     </div>
-    <ul id="options" ng-repeat="option in options">
-      <md-button class="quizBtn" name="answer" id="{{option}}" value="{{option}}" ng-model="$parent.quiz" ng-click="checkAnswer(option)" ng-disabled="!answerMode" flex>{{option}}</md-button>
-    </ul>
+    <!-- Check if valid before submitting -->
+    <form name="choices" class="quizChoices" ng-submit="choices.$valid && checkAnswer()">
+      <md-radio-group ng-disabled="!answerMode" ng-model="selected" required>
+        <md-radio-button ng-repeat="option in options" value="{{option}}" ng-disabled="!answerMode" aria-label="fart">
+          {{option}}
+        </md-radio-button>
+      </md-radio-group>
+
+      <md-button type="submit" class="quizBtn" ng-show="answerMode" ng-disabled="!choices.$valid" flex>Submit</md-button>
+    </form>
 
     <div ng-show="!answerMode">
+      <md-button class="quizBtn" ng-click="nextQuestion()" class="next-question btn btn-primary">Quiz on!</md-button>
+      <br/>
+      <!-- TODO: Eventually make this a dialog? -->
       <span ng-show="correctAns">That is correct!</span>
       <span ng-show="!correctAns">Sorry, wrong! The answer is "{{options[correct]}}".</span>
-      <br/>
-      <md-button class="quizBtn" ng-click="nextQuestion()" class="next-question btn btn-primary">Quiz on!</button>
+    </div>
+
+    <div class="quizScore" id="score" ng-show="inProgress || quizOver">
+      <h2>Score: {{score}}</h2>
     </div>
 
   </div>
