--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>This Movie is Click!</title>
   <meta name="description" content="">
+  <meta name="theme-color" content="#3d81ee">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
