--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <md-button class="md-icon-button" ng-click="toggleLeft()" hide-gt-md>
             <ng-md-icon icon="menu" style="fill: #fff" layout-align="center center"></ng-md-icon>
           </md-button>
+          {{topNavTitle}}
           <span flex></span>This Movie is Click!
         </div>
       </md-toolbar>
@@ -67,7 +68,7 @@
 
     </section>
   </div>
-
+  
   <script src="app.js"></script>
   <script src="clickHome/clickHome.js"></script>
   <script src="clickQuiz/clickQuiz.js"></script>
