--- a/clickQuiz/clickQuiz.html
+++ b/clickQuiz/clickQuiz.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" layout="row" ng-cloak flex>
-  <div flex="50" quiz></div>
+  <div quiz></div>
   <span flex></span>
   <div hide show-gt-sm>
     <img src="../assets/click8.jpg" />
