--- a/clickQuiz/partial-quiz.html
+++ b/clickQuiz/partial-quiz.html
@@ -36,8 +36,7 @@
   </div>
 </div>
 
-<div class="intro" ng-show="!inProgress">
-  <p>Click!</p>
+<div class="quizIntro" ng-show="!inProgress">
   <p>Click 'Play' on the magic remote that Adam Sandler has in the movie Click to start the quiz!</p>
   <md-button id="startQuiz" class="quizBtn" ng-click="start()">Play</button>
 </div>
