--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </md-toolbar>
 
-      <section id="content" role="content" layout="column" layout-padding>
+      <md-content id="content" role="content" layout="column" layout-padding>
         <md-content class="md-whiteframe-z2" ng-cloak>
           <ng-view>
             View Content
